[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/boss_orbit.png" type="Texture" id=1]
[ext_resource path="res://scenes/shadow_sprite/shadow_sprite.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/boss/boss_orbit.gd" type="Script" id=3]
[ext_resource path="res://assets/sounds/pluck_002.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds/CREAMnstr_Beast Vocalisation_09.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/drop_003.ogg" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="Curve" id=2]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, -360 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 0.181818 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 14, 14 )

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "spin"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[node name="BossOrbit" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="ShadowSprite" parent="." instance=ExtResource( 2 )]
texture = ExtResource( 1 )

[node name="Dust" type="CPUParticles2D" parent="."]
z_index = -1
local_coords = false
texture = ExtResource( 1 )
gravity = Vector2( 0, 0 )
angle = 360.0
angle_random = 1.0
angle_curve = SubResource( 2 )
scale_amount_curve = SubResource( 3 )

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
visible = false
shape = SubResource( 4 )

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="FireTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="PauseTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 0.0
anims/RESET = SubResource( 5 )
anims/spin = SubResource( 6 )

[node name="WakeTimer" type="Timer" parent="."]
one_shot = true

[node name="MagicSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -6.0

[node name="Roar" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -6.0

[node name="BounceSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -6.0

[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="FireTimer" to="." method="_on_FireTimer_timeout"]
[connection signal="timeout" from="WakeTimer" to="." method="_on_WakeTimer_timeout"]
